@@ -19,6 +19,12 @@ WIP      [MANUALS] Progress bar when extracting PDF pages.
 WIP      [MANUALS] Support for CBZ/CBR manuals.
          Wait until this is implemented in AEL and then port it from AEL into AML?
 
+[B]Advanced Emulator Launcher | version 0.9.7 | xx June 2018[/B]
+
+WIP      Reduce the memory consumption during the database generation.
+         By default use the options OPTION_COMPACT_JSON = True and OPTION_LOWMEM_WRITE_JSON = True
+         See https://stackoverflow.com/questions/24239613/memoryerror-using-json-dumps
+
 
 [B]Advanced Emulator Launcher | version 0.9.6 | 25 May 2018[/B]
 
